WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32378
CHROMIUM: Alpha blending in SVG filters is wrong
https://bugs.webkit.org/show_bug.cgi?id=32378
Summary
CHROMIUM: Alpha blending in SVG filters is wrong
Stephen White
Reported
2009-12-10 07:54:53 PST
Created
attachment 44613
[details]
Expected results from LayoutTests/svg/filters/feGaussianBlur.svg See attached. The soft edges are more saturated than they should be.
Attachments
Expected results from LayoutTests/svg/filters/feGaussianBlur.svg
(40.37 KB, image/png)
2009-12-10 07:54 PST
,
Stephen White
no flags
Details
Actual results from LayoutTests/svg/filters/feGaussianBlur.svg
(24.54 KB, image/png)
2009-12-10 07:55 PST
,
Stephen White
no flags
Details
Fix (don't apply the gamma LUT to the alpha channel).
(1.51 KB, patch)
2009-12-10 08:05 PST
,
Stephen White
krit
: review+
krit
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephen White
Comment 1
2009-12-10 07:55:39 PST
Created
attachment 44614
[details]
Actual results from LayoutTests/svg/filters/feGaussianBlur.svg
Stephen White
Comment 2
2009-12-10 08:05:35 PST
Created
attachment 44615
[details]
Fix (don't apply the gamma LUT to the alpha channel).
WebKit Review Bot
Comment 3
2009-12-10 08:09:28 PST
style-queue ran check-webkit-style on
attachment 44615
[details]
without any errors.
Dirk Schulze
Comment 4
2009-12-10 08:51:19 PST
Comment on
attachment 44615
[details]
Fix (don't apply the gamma LUT to the alpha channel). Good catch. LGTM Qt and Gtk need the same fix in a later patch. You can commit the patch yourself or set the commit queue flag.
Stephen White
Comment 5
2009-12-10 14:54:46 PST
Landed as
r51950
. Closing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug