Fix for alpha blending in SVG Filters on Chromium/skia. https://bugs.webkit.org/show_bug.cgi?id=32378

Reviewed by Dirk Schulze.

Covered by LayoutTests/svg/filters/feGaussianBlur.svg and others.

* platform/graphics/skia/ImageBufferSkia.cpp:
(WebCore::ImageBuffer::platformTransformColorSpace):



Canonical link: https://commits.webkit.org/43375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51950 268f45cc-cd09-0410-ab3c-d52691b4dbfc